--- a/Analyzers/CoreSharp.Analyzer.NHibernate/CoreSharp.Analyzer.NHibernate.csproj
+++ b/Analyzers/CoreSharp.Analyzer.NHibernate/CoreSharp.Analyzer.NHibernate.csproj
@@ -3,14 +3,14 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <PackageId>CoreSharp.Analyzer.NHibernate</PackageId>
-    <PackageVersion>0.2.0</PackageVersion>
+
     <Authors>cime</Authors>
     <Description>Roslyn Analyzer for CoreSharp.NHibernate</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <Copyright>Copyright 2019 (c) cime. All rights reserved.</Copyright>
     <PackageTags>Breeze BreezeJS</PackageTags>
     <PackageProjectUrl>https://github.com/cime/CoreSharp</PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/cime/CoreSharp/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageLicense>https://github.com/cime/CoreSharp/blob/master/LICENSE</PackageLicense>
     <RepositoryUrl>https://github.com/cime/CoreSharp</RepositoryUrl>
   </PropertyGroup>
 
@@ -24,10 +24,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Remove="lib\" />
-    <Content Include="tools\**\*">
+    <Content Include="bin\Debug\netstandard2.0\*">
       <Pack>true</Pack>
-      <PackagePath>tools\</PackagePath>
+      <PackagePath>analyzers\dotnet\cs\</PackagePath>
     </Content>
     <Content Include="bin\Debug\netstandard2.0\*">
       <Pack>true</Pack>
