--- a/CoreSharp.Breeze/CoreSharp.Breeze.csproj
+++ b/CoreSharp.Breeze/CoreSharp.Breeze.csproj
@@ -3,14 +3,13 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <PackageId>CoreSharp.Breeze</PackageId>
-        <PackageVersion>0.3.2</PackageVersion>
         <Authors>cime</Authors>
         <Description>Breeze ContextProvider for netstandard</Description>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
         <Copyright>Copyright 2019 (c) cime. All rights reserved.</Copyright>
         <PackageTags>Breeze BreezeJS</PackageTags>
         <PackageProjectUrl>https://github.com/cime/CoreSharp</PackageProjectUrl>
-        <PackageLicenseUrl>https://github.com/cime/CoreSharp/blob/master/LICENSE</PackageLicenseUrl>
+        <PackageLicense>https://github.com/cime/CoreSharp/blob/master/LICENSE</PackageLicense>
         <RepositoryUrl>https://github.com/cime/CoreSharp</RepositoryUrl>
     </PropertyGroup>
 
