--- a/CoreSharp.Cqrs.AspNetCore/CoreSharp.Cqrs.AspNetCore.csproj
+++ b/CoreSharp.Cqrs.AspNetCore/CoreSharp.Cqrs.AspNetCore.csproj
@@ -3,14 +3,14 @@
     <PropertyGroup>
         <TargetFrameworks>net5.0;netcoreapp3.1;netcoreapp3.0;netstandard2.0</TargetFrameworks>
         <PackageId>CoreSharp.Cqrs.AspNetCore</PackageId>
-        <PackageVersion>0.2.6</PackageVersion>
+
         <Authors>cime</Authors>
         <Description>.NET standard implementation of CQRS and EventAggregator</Description>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
         <Copyright>Copyright 2019 (c) cime. All rights reserved.</Copyright>
         <PackageTags>Core# CQRS Command Query Events EventAggregator AspNetCore</PackageTags>
         <PackageProjectUrl>https://github.com/cime/CoreSharp</PackageProjectUrl>
-        <PackageLicenseUrl>https://github.com/cime/CoreSharp/blob/master/LICENSE</PackageLicenseUrl>
+        <PackageLicense>https://github.com/cime/CoreSharp/blob/master/LICENSE</PackageLicense>
         <RepositoryUrl>https://github.com/cime/CoreSharp</RepositoryUrl>
     </PropertyGroup>
 
