--- a/CoreSharp.DataAccess/CoreSharp.DataAccess.csproj
+++ b/CoreSharp.DataAccess/CoreSharp.DataAccess.csproj
@@ -3,14 +3,14 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <PackageId>CoreSharp.DataAccess</PackageId>
-        <PackageVersion>0.2.5</PackageVersion>
+
         <Authors>cime</Authors>
         <Description>.NET standard implementation of CQRS and EventAggregaor</Description>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
         <Copyright>Copyright 2019 (c) cime. All rights reserved.</Copyright>
         <PackageTags>Core# dataaccess db</PackageTags>
         <PackageProjectUrl>https://github.com/cime/CoreSharp</PackageProjectUrl>
-        <PackageLicenseUrl>https://github.com/cime/CoreSharp/blob/master/LICENSE</PackageLicenseUrl>
+        <PackageLicense>https://github.com/cime/CoreSharp/blob/master/LICENSE</PackageLicense>
         <RepositoryUrl>https://github.com/cime/CoreSharp</RepositoryUrl>
         <LangVersion>8</LangVersion>
         <NullableContextOptions>enable</NullableContextOptions>
