--- a/CoreSharp.GraphQL/CoreSharp.GraphQL.csproj
+++ b/CoreSharp.GraphQL/CoreSharp.GraphQL.csproj
@@ -3,14 +3,14 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <PackageId>CoreSharp.GraphQL</PackageId>
-        <PackageVersion>0.2.3</PackageVersion>
+
         <Authors>cime</Authors>
         <Description>GraphQL CQRS integration and extension</Description>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
         <Copyright>Copyright 2019 (c) cime. All rights reserved.</Copyright>
         <PackageTags>Core# GraphQL CQRS</PackageTags>
         <PackageProjectUrl>https://github.com/cime/CoreSharp</PackageProjectUrl>
-        <PackageLicenseUrl>https://github.com/cime/CoreSharp/blob/master/LICENSE</PackageLicenseUrl>
+        <PackageLicense>https://github.com/cime/CoreSharp/blob/master/LICENSE</PackageLicense>
         <RepositoryUrl>https://github.com/cime/CoreSharp</RepositoryUrl>
         <LangVersion>8</LangVersion>
         <NullaableContextOptions>enable</NullaableContextOptions>
