--- a/CoreSharp.Identity/CoreSharp.Identity.csproj
+++ b/CoreSharp.Identity/CoreSharp.Identity.csproj
@@ -3,14 +3,14 @@
     <PropertyGroup>
         <TargetFrameworks>netcoreapp3.1;netcoreapp3.0;netstandard2.0</TargetFrameworks>
         <PackageId>CoreSharp.Identity</PackageId>
-        <PackageVersion>0.2.0</PackageVersion>
+
         <Authors>cime</Authors>
         <Description>GraphQL CQRS integration and extension</Description>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
         <Copyright>Copyright 2019 (c) cime. All rights reserved.</Copyright>
         <PackageTags>Core# Identity AspNetCore</PackageTags>
         <PackageProjectUrl>https://github.com/cime/CoreSharp</PackageProjectUrl>
-        <PackageLicenseUrl>https://github.com/cime/CoreSharp/blob/master/LICENSE</PackageLicenseUrl>
+        <PackageLicense>https://github.com/cime/CoreSharp/blob/master/LICENSE</PackageLicense>
         <RepositoryUrl>https://github.com/cime/CoreSharp</RepositoryUrl>
         <LangVersion>8</LangVersion>
         <NullableContextOptions>enable</NullableContextOptions>
