--- a/CoreSharp.NHibernate.PostgreSQL/CoreSharp.NHibernate.PostgreSQL.csproj
+++ b/CoreSharp.NHibernate.PostgreSQL/CoreSharp.NHibernate.PostgreSQL.csproj
@@ -3,14 +3,14 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <PackageId>CoreSharp.NHibernate.PostgreSQL</PackageId>
-        <PackageVersion>0.2.51</PackageVersion>
+
         <Authors>cime</Authors>
         <Description>.NET standard NHibernate PostgreSQL</Description>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
         <Copyright>Copyright 2019 (c) cime. All rights reserved.</Copyright>
         <PackageTags>Core# nhibernate dataaccess db postgresql postgre npgsql</PackageTags>
         <PackageProjectUrl>https://github.com/cime/CoreSharp</PackageProjectUrl>
-        <PackageLicenseUrl>https://github.com/cime/CoreSharp/blob/master/LICENSE</PackageLicenseUrl>
+        <PackageLicense>https://github.com/cime/CoreSharp/blob/master/LICENSE</PackageLicense>
         <RepositoryUrl>https://github.com/cime/CoreSharp</RepositoryUrl>
         <LangVersion>8</LangVersion>
         <NullableContextOptions>enable</NullableContextOptions>
