--- a/CoreSharp.Validation/CoreSharp.Validation.csproj
+++ b/CoreSharp.Validation/CoreSharp.Validation.csproj
@@ -3,14 +3,14 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <PackageId>CoreSharp.Validation</PackageId>
-        <PackageVersion>0.2.0</PackageVersion>
+
         <Authors>cime</Authors>
         <Description>.NET standard implementation of validation</Description>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
         <Copyright>Copyright 2019 (c) cime. All rights reserved.</Copyright>
         <PackageTags>Core# validation FluentValidation</PackageTags>
         <PackageProjectUrl>https://github.com/cime/CoreSharp</PackageProjectUrl>
-        <PackageLicenseUrl>https://github.com/cime/CoreSharp/blob/master/LICENSE</PackageLicenseUrl>
+        <PackageLicense>https://github.com/cime/CoreSharp/blob/master/LICENSE</PackageLicense>
         <RepositoryUrl>https://github.com/cime/CoreSharp</RepositoryUrl>
     </PropertyGroup>
 
